tests/ui/splat/splat-fn-ptr-tuple-const.stderr
error: function pointer calls are not allowed in constants
  --> $DIR/splat-fn-ptr-tuple-const.rs:14:20
   |
LL |     const R2: () = F2(1, 2);
   |                    ^^^^^^^^

error: function pointer calls are not allowed in constants
  --> $DIR/splat-fn-ptr-tuple-const.rs:18:20
   |
LL |     const R1: () = F1((1, 2));
   |                    ^^^^^^^^^^

error: aborting due to 2 previous errors

